@@ -6,3 +6,5 @@ org.gradle.daemon=false
 mc_version=1.14.4
 jei_version=6.0.0.25
 projecte_version=PE1.0.0B
+# https://modmaven.dev/appeng/appliedenergistics2/
+applied_energistics_version=8.2.0
